Changes to package.json for dependency version requirement
Signed-off-by: Aayush Mahajan <aayush10001@gmail.com>

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "headless-hook",
     "session-token"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "types": "./dist/client/index.d.ts",
@@ -64,9 +67,9 @@
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
-    "next": "^14.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": ">=14.0.0",
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
