Ts compile: compile tsx to js, enable isolated modules
Signed-off-by: Aayush Mahajan <aayush10001@gmail.com>

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,10 +11,10 @@
     "declarationMap": true,
     "noEmit": false,
     "allowJs": false,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "esModuleInterop": true,
     "preserveConstEnums": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "stripInternal": true
   },
   "include": [
