--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aayush10001/next-places-autocomplete",
-  "version": "0.1.3",
-  "description": "Google Places (New + Sessionized) Autocomplete component and hook for Next.js 14+",
+  "version": "0.1.4",
+  "description": "Google Places (New + Sessionized) Autocomplete hook for Next.js 14+",
   "author": "Aayush Mahajan",
   "license": "MIT",
   "repository": {
@@ -20,25 +20,24 @@
     "debounce",
     "throttle",
     "session",
+    "session-token",
     "server-functions",
-    "shadcn",
     "headless",
     "hook",
     "headless-component",
-    "headless-hook",
-    "session-token"
+    "headless-hook"
   ],
   "publishConfig": {
     "access": "public"
   },
   "exports": {
     ".": {
-      "import": "./dist/components/autocomplete/index.js",
-      "types": "./dist/components/autocomplete/index.d.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
-  "main": "./dist/components/autocomplete/index.js",
-  "types": "./dist/components/autocomplete/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "src",
@@ -55,15 +54,8 @@
   },
   "dependencies": {
     "@googlemaps/places": "^2.0.1",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-popover": "^1.1.14",
     "@types/lodash.throttle": "^4.1.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "lodash.throttle": "^4.1.1",
-    "lucide-react": "^0.522.0",
-    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0"
   },
   "peerDependencies": {
@@ -74,15 +66,22 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.14",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.4",
+    "lucide-react": "^0.522.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
+    "tailwind-merge": "^3.3.1",
     "typescript": "^5"
   }
 }
