--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "src/autocomplete",
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "node",
@@ -18,7 +18,6 @@
     "stripInternal": true
   },
   "include": [
-    "src/components/**/*",
-    "src/lib/**/*"
+    "src/autocomplete/*",
   ],
 }
