Import autocomplete with its npm name
Signed-off-by: Aayush Mahajan <aayush10001@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@aayush10001/next-places-autocomplete": ["./src/autocomplete"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
