--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
+    "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -82,9 +84,9 @@
     "eslint-config-next": "15.3.4",
     "lucide-react": "^0.522.0",
     "prettier": "^3.5.3",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "tailwind-merge": "^3.3.1",
     "typescript": "^5"
   }
 }
