--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aayush10001/next-places-autocomplete-headless",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Google Maps Places (New) Sessionized Autocomplete hook for Next.js 14+",
   "author": "Aayush Mahajan",
   "license": "MIT",
@@ -68,6 +68,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.4.6",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
